Fix: Category stripe on index cards & misplaced hr
The category stripe on index cards was occasionally displayed
incorrectly, with a white line inside it. This caused because it was
rendered as a horizontal rule with top & bottom borders and a
*supposedly* empty content, which would sometimes not be rendered
entirely empty. The line is now the top-border of the card body's
header.

The horizontal rule, meanwhile, was in a semantically inappropriate
place and didn't look correct on text-only browsers or sound correct
with screen readers; it separated the category tab from the
corresponding card. It as been moved to the end of the logical card (and
the beginning of the next one), making for a more semantically sensible
layout.

--- a/_sass/categories.scss
+++ b/_sass/categories.scss
@@ -43,12 +43,9 @@ $index-border: 1px solid $index-border-color;
     color: color-yiq($color);
   }
 
-  .card-header-stripe {
-    border: 2px solid $color;
+  header.card-body {
+    border-top: 4px solid $color;
     border-top-left-radius: calc(.25rem - 1px);
-    margin: 0;
-    margin-bottom: -2px;
-    z-index: 1000;
   }
 }
 
